--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
-div {
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 3px;
+body {
+    background-color: gray;
 }
 
-.center{
+div {
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+    padding: 5px;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 5px;
+    color: white;
+}
+
+/* .center{
     display: inline-block;
     position: absolute;
     margin: auto;
@@ -14,4 +24,32 @@ div {
     min-width: 100px;
     min-height: 100px;
     width: 100px;
+    height: 100px;
+} */
+
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: inline-block;
+}
+
+.link-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #77b9ff; /* Set your desired background color */
+    text-decoration: none;
+    color: black;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    /* transition: background-color 0.3s ease; */
+    transition: all 0.15s ease;
+    margin: 5px;
+  }
+  
+.link-button:hover {
+    background-color: #0d141b; /* Change the background color on hover */
+    color: white;
 }
