--- a/style.css
+++ b/style.css
@@ -1,10 +1,25 @@
 body {
     background-color: gray;
+    /* background-repeat: repeat; */
     margin: 0px;
+    background-size: cover;
+    background-position: center;
+}
+
+.background-container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background-color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
 }
 
 div {
-    background-color: rgba(0, 0, 0, 0.7);
+    /* background-color: rgba(0, 0, 0, 0.7); */
+    background-color: rgba(22, 0, 121, 0.7);
     padding: 5px;
 }
 
@@ -49,7 +64,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .popup-header {
-    background-color: #48ad00;
+    background-color: #160079;
     color: white;
     font-size: 30px;
     font-weight: bold;
