Add a-day b-day headers to settings

--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ h1, h2, h3, h4, h5, h6, p {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-
 }
   
 .link-button:hover {
@@ -112,4 +111,20 @@ h1, h2, h3, h4, h5, h6, p {
     flex: 1;
     min-width: 150px;
     border-right: 2px solid #1a36af;
+}
+
+.aday-schedule-header {
+    background-color: #ff8484;
+}
+
+.bday-schedule-header {
+    background-color: #73b2ff;
+}
+
+.schedule-header {
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+
 }
