add unfinished clone template code

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(62, 94, 182);
+    background-color: #3f46a5;
     margin: 0px;
     background-size: cover;
     background-position: center;
